[package]
name = "ili9486"
version = "0.2.0"
authors = [
    "Andres O. Vela <andresovela@gmail.com>",
    "Andrew Doble <http://github.com/adoble>",
]
edition = "2021"

[dependencies]
embedded-hal = "1.0.0"
display-interface = "0.5.0"
embedded-graphics = "0.8.1"

[dev-dependencies]
display-interface-parallel-gpio = "0.7.0"
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
embedded-hal = { version = "1.0.0" }
embedded-time = "0.12.0"

defmt = "0.3.0"
defmt-rtt = "0.4.1"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

# We're using a Pico by default for the examples
rp-pico = { version = "0.9.0" }
