[package]
name = "ili9486"
version = "0.2.0"
authors = [
    "Andres O. Vela <andresovela@gmail.com>",
    "Andrew Doble <http://github.com/adoble>",
]
edition = "2021"

[dependencies]
embedded-hal = { features = ["unproven"], version = "0.2.7" }
display-interface = { git = "https://github.com/itswenb/display-interface.git", branch = "main" }
embedded-graphics = "0.8.1"

[dev-dependencies]
display-interface-parallel-gpio = "0.7.0"
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
embedded-time = "0.12.0"

defmt = "0.3.0"
defmt-rtt = "0.4.1"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

# We're using a Pico by default for the examples
rp-pico = { version = "0.9.0" }
